# pyproject-versioning

./: README.md  flake.nix  pyproject.toml
nix/: shared.nix
pythonedaartifactapplicationpyprojectversioning/: pythoneda-artifact-application-pyproject-versioning.py
